# CMMath

./: .gitignore  BATCH_QUERY_OPTIMIZATION.md  CMakeLists.txt  GEOMETRY_REFACTORING.md  MIGRATION.md  path_config.cmake  test_compile.cpp
build_test/: test_build.sh
docs/: AABB_Clear_Design.md  AABB_OBB_改进建议.md  AABB_OBB_改进总结_完整报告.md  BoundingSphere_改进总结报告.md  BoundingVolumesDataStorage_总结.md  BoundingVolumesDataStorage_设计文档.md  BoundingVolumes_改进总结.md  GAME_FEATURES.md  GEOMETRY_REFACTORING.md
examples/: AABBTest.cpp  AlphaBlendTest.cpp  AngleTest.cpp  BoundingSphereTest.cpp  BoundingVolumesTest.cpp  CMakeLists.txt  CoordinateSystemTest.cpp  DirectMatrix.cpp  FrustumTest.cpp  GeometryTest.cpp  HalfFloatTest.cpp  LineSegmentTest.cpp  OBBTest.cpp  OutputEpsilon.cpp  PlaneTest.cpp  QuaternionTest.cpp  RayTest.cpp  RotateMatrix.cpp  SphereTest.cpp  TransformBenchmark.cpp  TransformTest.cpp  TriangleTest.cpp  TypeSizeof.cpp
examples/color/: ARCHITECTURE_REFACTORING.md  CMakeLists.txt  ColorAdvancedTest.cpp  ColorConversionTest.cpp  ColorDitheringTest.cpp  ColorQuantizeTest.cpp
inc/hgl/: CoreType.h
inc/hgl/color/: ColorDithering.h  ColorQuantize.h
inc/hgl/graph/: CameraInfo.h
inc/hgl/math/: AlphaBlend.h  AlphaBlendMode.h  Angle.h  Area.h  CatmullRomSpline2D.h  CatmullRomSpline3D.h  Clamp.h  Color.h  Curve.h  Easing.h  FastTriangle.h  FloatPrecision.h  Geometry.h  GeometryCore.h  GeometryExtended.h  GeometryQueries.h  Gradient.h  HalfFloat.h  Lerp1D.h  Lerp2D.h  Lerp3D.h  LerpType.h  Luminance.h  MathConst.h  MathConstants.h  MathUtils.h  Matrix.h  MatrixOperations.h  MatrixTypes.h  Noise.h  NormalData.h  PhysicsCalculations.h  PrimaryMathematics.h  Projection.h  Quaternion.h  Random.h  SIMD.h  ScalarConversion.h  Sum.h  Transform2D.h  (+7 more)
inc/hgl/math/animation/: DualQuaternion.h  SkeletonMath.h
inc/hgl/math/geometry/: AABB.h  AABB2D.h  BatchQueryStructures.h  BoundingSphere.h  BoundingVolumes.h  BoundingVolumesDataStorage.h  Box.h  Capsule.h  Collision2D.h  Cone.h  Coordinate.h  Cylinder.h  Frustum.h  GeometryCalculations.h  GeometryUtils.h  HeightMapContour.h  HollowCylinder.h  LineSegment.h  OBB.h  Plane.h  Polygon2D.h  Ray.h  ShorelineData.h  Sphere.h  SpiralStairs.h  Stairs.h  TRS.h  Torus.h  Triangle.h
inc/hgl/math/geometry/primitives/: Capsule.h  Cone.h  Cylinder.h  GeometryBase.h  Sphere.h  Torus.h
inc/hgl/math/geometry/queries/: CollisionDetector.h  ContainmentQuery.h  DistanceQuery.h  RaycastQuery.h
inc/hgl/math/spatial/: BVH.h  Octree.h  QuadTree.h
inc/hgl/math/transform/: Transform.h  TransformAction.h
inc/hgl/type/: CompareUtil.h  Gradient.h  MemoryUtil.h
src/: CMakeLists.txt
src/Color/: ColorDithering.cpp  ColorQuantize.cpp
src/Geometry/: AABB.cpp  BoundingSphere.cpp  BoundingVolumes.cpp  Box.cpp  Cone.cpp  Cylinder.cpp  Frustum.cpp  GeometryUtils.cpp  HeightMapContour.cpp  OBB.cpp  OBB_SetFromPoints_AVX2.cpp  Plane.cpp  Ray.cpp  ShorelineData.cpp  TRS.cpp
src/Geometry/queries/: CollisionDetector.cpp  ContainmentQuery.cpp  DistanceQuery.cpp  RaycastQuery.cpp
src/Math/: CatmullRomSpline2D.cpp  CatmullRomSpline3D.cpp  Color.cpp  Curve.cpp  DualQuaternion.cpp  HalfFloat.cpp  LAtan.cpp  Luminance.cpp  Matrix4f.cpp  PerlinNoise.cpp  Quat.cpp  Random.cpp  SIMD_AVX.cpp  SIMD_SSE.cpp  SimplexNoise.cpp  SkeletonMath.cpp
src/Spatial/: BVH.cpp  Octree.cpp  QuadTree.cpp
src/Transform/: Transform.cpp
tests/: CMakeLists.txt  README.md  test_aabb_obb_improvements.cpp  test_bounding_volumes_improvements.cpp  test_bounding_volumes_storage.cpp  test_collision_2d.cpp  test_collision_detector.cpp  test_containment_query.cpp  test_distance_query.cpp  test_frustum.cpp  test_geometry_primitives.cpp  test_heightmap_contour.cpp  test_heightmap_contour_standalone.cpp  test_hollow_cylinder.cpp  test_line_segment.cpp  test_obb.cpp  test_polygon_2d.cpp  test_raycast_query.cpp  test_standalone  test_triangle.cpp
